Update Home page 2.html

--- a/Home page 2.html
+++ b/Home page 2.html
@@ -6,7 +6,7 @@
     <body>
         <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
             <div class="navigation-wrap">
-                <a href="#" aria-current="page" class="logo-link w-nac-brand w--current"><img src="C:\Users\Adit Vikram Mishra\Desktop\Miscellaneous\College project\Company logo1.png" width="108" alt="" class="logo-image"></a>
+                <a href="#" aria-current="page" class="logo-link w-nac-brand w--current"><img src="https://github.com/GammaKing2000/website-in-making/blob/main/Company%20logo1.png" width="108" alt="" class="logo-image"></a>
                 <div class="menu">
                     <nav role="navigation" class="navigation-items w-nav-menu">
                         <a href="#" class="navigation-items w-nav-link">About</a>
