--- a/Home page 2.html
+++ b/Home page 2.html
@@ -15,7 +15,7 @@
                         <a href="#" class="navigation-items w-nav-link">Order</a>
                         <a href="#" class="navigation-items w-nav-link">Contact</a>
                     </nav>
-                    <div class="menu-button w-nav-button"><img src="C:\Users\Adit Vikram Mishra\Desktop\Miscellaneous\Food.png" width="22" alt="" class="menu-icon"></div>
+                    <div class="menu-button w-nav-button"><img src="https://github.com/GammaKing2000/website-in-making/blob/main/Food.png" width="22" alt="" class="menu-icon"></div>
                 </div>
                 <a href="#" class="button cc-contact-us w-inline-block">
                     <div>Contact Us</div>
@@ -51,7 +51,7 @@
                             <a href="/about" class="button w-inline-block">
                                 <div>Learn More</div>
                             </a>
-                        </div><img src="C:\Users\Adit Vikram Mishra\Pictures\Slide Show\994658.jpg" id="w-node-_secondBigNumber" alt="">
+                        </div><img src="https://github.com/GammaKing2000/website-in-making/blob/main/994658.jpg" id="w-node-_secondBigNumber" alt="">
                     </div>
                     <div class="w-layout-grid about-grid cc-about-2">
                         <div id="w-node-_thirdBigNumber">
@@ -63,7 +63,7 @@
                             <a href="#" class="button w-inline-block">
                                 <div>Learn More</div>
                             </a>
-                        </div><img src="C:\Users\Adit Vikram Mishra\Pictures\Slide Show\812407.jpg" id="w-node-_fourthBigNumber" alt="">
+                        </div><img src="https://github.com/GammaKing2000/website-in-making/blob/main/812407.jpg" id="w-node-_fourthBigNumber" alt="">
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
         <div class="section">
             <div class="container">
                 <div class="footer-wrap">
-                    <a href="https://www.google.com/" target="_blank" class="webflow-link w-inline-block"><img src="C:\Users\Adit Vikram Mishra\Desktop\Miscellaneous\enigma logo.png" width="150" alt="" class="webflow-logo-tiny">
+                    <a href="https://www.google.com/" target="_blank" class="webflow-link w-inline-block"><img src="https://github.com/GammaKing2000/website-in-making/blob/main/enigma%20logo.png" width="150" alt="" class="webflow-logo-tiny">
                         <div class="paragraph-tiny">Powered by Google</div>
                     </a>
                 </div>
