--- a/Home page 2.html
+++ b/Home page 2.html
@@ -9,11 +9,11 @@
                 <a href="#" aria-current="page" class="logo-link w-nac-brand w--current"><img src="C:\Users\Adit Vikram Mishra\Desktop\Miscellaneous\College project\Company logo1.png" width="108" alt="" class="logo-image"></a>
                 <div class="menu">
                     <nav role="navigation" class="navigation-items w-nav-menu">
-                        <a href="#" class="navigation-items w-nav-link">About</a>
-                        <a href="#" class="navigation-items w-nav-link">Work</a>
-                        <a href="#" class="navigation-items w-nav-link">Menu</a>
-                        <a href="#" class="navigation-items w-nav-link">Order</a>
-                        <a href="#" class="navigation-items w-nav-link">Contact</a>
+                        <a href="#" class="navigation-item w-nav-link">About</a>
+                        <a href="#" class="navigation-item w-nav-link">Work</a>
+                        <a href="#" class="navigation-item w-nav-link">Menu</a>
+                        <a href="#" class="navigation-item w-nav-link">Order</a>
+                        <a href="#" class="navigation-item w-nav-link">Contact</a>
                     </nav>
                     <div class="menu-button w-nav-button"><img src="C:\Users\Adit Vikram Mishra\Desktop\Miscellaneous\Food.png" width="22" alt="" class="menu-icon"></div>
                 </div>
